compiler/testData/diagnostics/tests/sealed/NeverFinal.kt
<!INCOMPATIBLE_MODIFIERS!>final<!> <!INCOMPATIBLE_MODIFIERS!>sealed<!> class Base {

}